# GAT_provdetector

./: .gitignore  GAT.py  db.json  fusion_data.py  fusion_eval.py  fusion_main.py  fusion_path_preprocess.py  lemmatization_check.py  lemmatization_utils.py  main.py  pyproject.toml
GNN_data/: M1_NodeLabel.json  M1_Scored.pkl  M2_NodeLabel.json  M2_Scored.pkl  M3_NodeLabel.json  M3_Scored.pkl  M4_NodeLabel.json  M4_Scored.pkl  M5_NodeLabel.json  M5_Scored.pkl  M6_NodeLabel.json  M6_Scored.pkl  S1_NodeLabel.json  S1_Scored.pkl  S2_NodeLabel.json  S2_Scored.pkl  S3_NodeLabel.json  S3_Scored.pkl  S4_NodeLabel.json  S4_Scored.pkl
GNN_data_integrate/: M1.json  M2.json  M3.json  M4.json  M5.json  M6.json  S1.json  S2.json  S3.json  S4.json  node_check.txt
GNN_model/: GAT.py  data_preprocess.py  main.py
commons/: embedding.py  ep.py  lof.py  matches.py  rm_duplication_and_mark_label.py
evaluators/GATv2/: GATv2.py  train.py
evaluators/GCN/: GCN.py
evaluators/GIN/: GIN.py
evaluators/graphSAGE/: graphSAGE.py
