[tool.poetry]
name = "provdetector"
version = "0.1.0"
description = ""
authors = ["jinyuzhu <740056245@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.9"
numpy = "^1.23.4"
pangres = "^4.1.2"
networkx = "^2.8.7"
pandas = "^1.5.1"
SQLAlchemy = "^1.4.42"
gensim = "^4.2.0"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.1"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
